Impl Nest backend

--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,84 @@
+# Front files
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/tmp
-/out-tsc
+/Front/dist
+/Front/tmp
+/Front/out-tsc
 # Only exists if Bazel was run
-/bazel-out
+/Front/bazel-out
 
 # dependencies
-/node_modules
+/Front/node_modules
 
 # profiling files
-chrome-profiler-events*.json
-speed-measure-plugin*.json
+/Front/chrome-profiler-events*.json
+/Front/speed-measure-plugin*.json
 
 # IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+/Front/.idea
+/Front/.project
+/Front/.classpath
+/Front/.c9/
+/Front/*.launch
+/Front/.settings/
+/Front/*.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
+/Front/.vscode/*
+/Front/!.vscode/settings.json
+/Front/!.vscode/tasks.json
+/Front/!.vscode/launch.json
+/Front/!.vscode/extensions.json
+/Front/.history/*
 
 # misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
+/Front/.sass-cache
+/Front/connect.lock
+/Front/coverage
+/Front/libpeerconnection.log
+/Front/npm-debug.log
+/Frontyarn-error.log
+/Fronttestem.log
+/Front/typings
 
 # System Files
-.DS_Store
-Thumbs.db
+/Front/.DS_Store
+/Front/Thumbs.db
+
+# Back End Files
+
+# compiled output
+/Back/dist
+/Back/node_modules
+
+# Logs
+/Back/logs
+/Back/*.log
+/Back/npm-debug.log*
+/Back/yarn-debug.log*
+/Back/yarn-error.log*
+/Back/lerna-debug.log*
+
+# OS
+/Back/.DS_Store
+
+# Tests
+/Back/coverage
+/Back/.nyc_output
+
+# IDEs and editors
+/Back/.idea
+/Back/.project
+/Back/.classpath
+/Back/.c9/
+/Back/*.launch
+/Back/.settings/
+/Back/*.sublime-workspace
+
+# IDE - VSCode
+/Back/.vscode/*
+/Back/!.vscode/settings.json
+/Back/!.vscode/tasks.json
+/Back/!.vscode/launch.json
+/Back/!.vscode/extensions.json
