--- a/back/package.json
+++ b/back/package.json
@@ -29,6 +29,8 @@
     "bcrypt": "^3.0.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.1",
+    "express-rate-limit": "^5.0.0",
+    "helmet": "^3.21.1",
     "mongoose": "^5.7.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
