--- a/Front/package.json
+++ b/Front/package.json
@@ -23,6 +23,7 @@
     "ng-zorro-antd": "^8.1.2",
     "ng2-charts": "^2.3.0",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^8.18.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
